[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/ui/PanelBeige.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/Equipment.gd" type="Script" id=2]
[ext_resource path="res://sprites/ui/PanelBrown.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 9.75
margin_right = 10.75
margin_top = 10.0
margin_bottom = 8.75

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="StyleBoxTexture" id=10]

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxTexture" id=12]

[sub_resource type="StyleBoxTexture" id=13]

[sub_resource type="StyleBoxTexture" id=14]

[node name="Equipment" type="Panel"]
margin_left = -480.0
margin_top = -269.0
margin_right = -248.0
margin_bottom = -37.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="EquipList" type="ItemList" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.6201
margin_top = 14.0
margin_right = 4.0
focus_mode = 0
custom_styles/cursor = SubResource( 2 )
custom_styles/selected_focus = SubResource( 3 )
custom_styles/bg_focus = SubResource( 4 )
custom_styles/cursor_unfocused = SubResource( 5 )
custom_styles/selected = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
allow_reselect = true
max_columns = 3
same_column_width = true
fixed_icon_size = Vector2( 64, 64 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.0
margin_top = 14.0
margin_right = -9.0
margin_bottom = 99.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Tool" type="ItemList" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 9.0
margin_right = 19.0
margin_bottom = -6.0
focus_mode = 0
custom_styles/cursor = SubResource( 9 )
custom_styles/selected_focus = SubResource( 10 )
custom_styles/bg_focus = SubResource( 11 )
custom_styles/cursor_unfocused = SubResource( 12 )
custom_styles/selected = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
allow_reselect = true
max_columns = 2
same_column_width = true
fixed_column_width = 64
fixed_icon_size = Vector2( 64, 64 )

[connection signal="item_activated" from="EquipList" to="." method="_on_EquipList_item_activated"]
[connection signal="item_selected" from="EquipList" to="." method="_on_EquipList_item_selected"]
[connection signal="item_activated" from="Panel/Tool" to="." method="_on_Tool_item_activated"]
[connection signal="item_selected" from="Panel/Tool" to="." method="_on_Tool_item_selected"]
